--- a/client/src/pages/home/Home.scss
+++ b/client/src/pages/home/Home.scss
@@ -41,7 +41,7 @@
     }
 
     .container {
-      width: 1400px;
+      width: 1200px;
       display: flex;
       align-items: center;
       gap: 200px;
@@ -56,7 +56,7 @@
           flex: 3;
         }
 
-        img{
+        img {
           width: 100%;
         }
         h1 {
@@ -83,7 +83,7 @@
           letter-spacing: 1px;
         }
 
-        video{
+        video {
           width: 720px;
         }
       }
@@ -104,9 +104,9 @@
     padding: 100px 0px;
 
     .container {
-      width: 1400px;
+      width: 1200px;
 
-      h1{
+      h1 {
         color: #555;
       }
 
@@ -132,19 +132,19 @@
             height: 50px;
           }
 
-          .line{
+          .line {
             width: 50px;
             height: 2px;
             background-color: lightgray;
-            transition: all .3s ease;
+            transition: all 0.3s ease;
           }
 
           span {
             font-weight: 300;
           }
 
-          &:hover{
-            .line{
+          &:hover {
+            .line {
               width: 80px;
               background-color: #1dbf73;
             }
