--- a/client/src/pages/gig/Gig.scss
+++ b/client/src/pages/gig/Gig.scss
@@ -3,7 +3,7 @@
   justify-content: center;
 
   .container {
-    width: 1400px;
+    width: 1200px;
     padding: 30px 0px;
     display: flex;
     gap: 50px;
@@ -60,7 +60,7 @@
       }
 
       .slider {
-        background-color: #F5F5F5;
+        background-color: #f5f5f5;
         img {
           max-height: 500px;
           object-fit: contain;
@@ -157,8 +157,6 @@
           }
         }
       }
-
-      
     }
 
     .right {
@@ -179,16 +177,16 @@
         align-items: center;
         justify-content: space-between;
 
-        h2{
+        h2 {
           font-weight: 300;
         }
 
-        h3{
+        h3 {
           font-weight: 500;
         }
       }
 
-      p{
+      p {
         color: gray;
         margin: 10px 0px;
       }
@@ -210,8 +208,8 @@
         }
       }
 
-      .features{
-        .item{
+      .features {
+        .item {
           display: flex;
           align-items: center;
           gap: 10px;
@@ -219,13 +217,13 @@
           color: gray;
           margin-bottom: 5px;
 
-          img{
+          img {
             width: 14px;
           }
         }
       }
 
-      button{
+      button {
         background-color: #1dbf73;
         padding: 10px;
         color: white;
